--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,7 +10,7 @@
     "type-check": "tsc --noEmit",
     "test": "echo 'No tests yet' && exit 0",
     "clean": "rm -rf .next out node_modules/.cache",
-    "setup": "npm install",
+    "setup": "bun install",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,md}'",
     "format:check": "prettier --check '**/*.{js,jsx,ts,tsx,json,css,md}'",
     "preview": "next build && next start"
@@ -21,8 +21,10 @@
     "@ai-sdk/groq": "latest",
     "@ai-sdk/openai": "latest",
     "@ai-sdk/react": "latest",
+    "@coral-xyz/anchor": "^0.31.1",
     "@eslint/eslintrc": "latest",
     "@hookform/resolvers": "^3.10.0",
+    "@jup-ag/api": "^6.0.44",
     "@modelcontextprotocol/sdk": "^1.17.3",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -38,7 +40,7 @@
     "@radix-ui/react-menubar": "1.1.4",
     "@radix-ui/react-navigation-menu": "1.2.3",
     "@radix-ui/react-popover": "1.1.4",
-    "@radix-ui/react-progress": "1.1.1",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "1.2.2",
     "@radix-ui/react-scroll-area": "latest",
     "@radix-ui/react-select": "latest",
@@ -52,27 +54,31 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "latest",
     "@radix-ui/react-use-controllable-state": "latest",
+    "@solana-program/compute-budget": "^0.8.0",
+    "@solana-program/system": "^0.7.0",
+    "@solana-program/token": "^0.5.1",
+    "@solana/actions": "^1.6.6",
+    "@solana/kit": "^2.3.0",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.4",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
+    "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
     "embla-carousel-react": "latest",
     "geist": "^1.3.1",
     "harden-react-markdown": "latest",
-    "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
     "path": "latest",
     "react": "^19",
-    "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
     "react-markdown": "latest",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.4",
     "remark-gfm": "latest",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
